fixed ApiCallsThrottling to return values from JoinPoint