@@ -10,25 +10,34 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.test.context.ActiveProfiles;
 import ru.obukhov.trader.TokenValidationStartupListener;
+import ru.obukhov.trader.common.model.ExecutionResult;
 import ru.obukhov.trader.common.util.ExecutionUtils;
 import ru.obukhov.trader.config.properties.ApiProperties;
 import ru.obukhov.trader.test.utils.AssertUtils;
 import ru.obukhov.trader.test.utils.model.account.TestAccounts;
 import ru.obukhov.trader.test.utils.model.instrument.TestInstruments;
 import ru.obukhov.trader.test.utils.model.order_state.TestOrderStates;
+import ru.tinkoff.piapi.contract.v1.Account;
+import ru.tinkoff.piapi.contract.v1.BrokerReportResponse;
+import ru.tinkoff.piapi.contract.v1.GetTradingStatusResponse;
 import ru.tinkoff.piapi.contract.v1.Instrument;
 import ru.tinkoff.piapi.contract.v1.OrderDirection;
+import ru.tinkoff.piapi.contract.v1.OrderState;
 import ru.tinkoff.piapi.contract.v1.OrderType;
+import ru.tinkoff.piapi.contract.v1.PositionsResponse;
+import ru.tinkoff.piapi.contract.v1.PostOrderResponse;
 import ru.tinkoff.piapi.contract.v1.Quotation;
 import ru.tinkoff.piapi.core.InstrumentsService;
 import ru.tinkoff.piapi.core.MarketDataService;
 import ru.tinkoff.piapi.core.OperationsService;
 import ru.tinkoff.piapi.core.OrdersService;
 import ru.tinkoff.piapi.core.UsersService;
+import ru.tinkoff.piapi.core.models.Positions;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Supplier;
 
 @Slf4j
 @ActiveProfiles("test")
@@ -62,16 +71,17 @@ public class ApiCallsThrottlingIntegrationTest {
 
         waitForThrottlingCounters();
 
-        testThrottling(() -> instrumentsService.getInstrumentByFigiSync(figi), 200);
+        testThrottling(() -> instrumentsService.getInstrumentByFigiSync(figi), 200, instrument);
     }
 
     @Test
     void usersService() throws InterruptedException {
-        Mockito.doReturn(Collections.emptyList()).when(usersService).getAccountsSync();
+        final List<Account> accounts = List.of(TestAccounts.IIS.tinkoffAccount(), TestAccounts.TINKOFF.tinkoffAccount());
+        Mockito.doReturn(accounts).when(usersService).getAccountsSync();
 
         waitForThrottlingCounters();
 
-        testThrottling(() -> usersService.getAccountsSync(), 100);
+        testThrottling(() -> usersService.getAccountsSync(), 100, accounts);
     }
 
     // region operationsService tests
@@ -82,15 +92,17 @@ public class ApiCallsThrottlingIntegrationTest {
         final Instant from = Instant.now();
         final Instant to = Instant.now();
 
-        Mockito.doReturn(null).when(operationsService).getPositionsSync(accountId);
-        Mockito.doReturn(null).when(operationsService).getBrokerReportSync(accountId, from, to);
+        Positions positions = Positions.fromResponse(PositionsResponse.getDefaultInstance());
+        Mockito.doReturn(positions).when(operationsService).getPositionsSync(accountId);
+
+        Mockito.doReturn(BrokerReportResponse.getDefaultInstance()).when(operationsService).getBrokerReportSync(accountId, from, to);
 
         waitForThrottlingCounters();
 
         final Runnable runnable = () -> operationsService.getBrokerReportSync(accountId, from, to);
         ExecutionUtils.run(runnable, ApiCallsThrottling.OPERATIONS_SERVICE_BROKER_REPORT_LIMIT);
 
-        testThrottling(() -> operationsService.getPositionsSync(accountId), ApiCallsThrottling.OPERATIONS_SERVICE_LIMIT);
+        testThrottling(() -> operationsService.getPositionsSync(accountId), ApiCallsThrottling.OPERATIONS_SERVICE_LIMIT, positions);
     }
 
     @Test
@@ -100,14 +112,16 @@ public class ApiCallsThrottlingIntegrationTest {
         final Instant to = Instant.now();
 
         Mockito.doReturn(null).when(operationsService).getPositionsSync(accountId);
-        Mockito.doReturn(null).when(operationsService).getBrokerReportSync(accountId, from, to);
+
+        final BrokerReportResponse brokerReportResponse = BrokerReportResponse.getDefaultInstance();
+        Mockito.doReturn(brokerReportResponse).when(operationsService).getBrokerReportSync(accountId, from, to);
 
         waitForThrottlingCounters();
 
         ExecutionUtils.run(() -> operationsService.getPositionsSync(accountId), ApiCallsThrottling.OPERATIONS_SERVICE_LIMIT);
 
-        final Runnable runnable = () -> operationsService.getBrokerReportSync(accountId, from, to);
-        testThrottling(runnable, ApiCallsThrottling.OPERATIONS_SERVICE_BROKER_REPORT_LIMIT);
+        final Supplier<BrokerReportResponse> supplier = () -> operationsService.getBrokerReportSync(accountId, from, to);
+        testThrottling(supplier, ApiCallsThrottling.OPERATIONS_SERVICE_BROKER_REPORT_LIMIT, brokerReportResponse);
     }
 
     // endregion
@@ -116,11 +130,12 @@ public class ApiCallsThrottlingIntegrationTest {
     void marketDataService() throws InterruptedException {
         final String instrumentId = TestInstruments.APPLE.getFigi();
 
-        Mockito.doReturn(null).when(marketDataService).getTradingStatusSync(instrumentId);
+        GetTradingStatusResponse response = GetTradingStatusResponse.getDefaultInstance();
+        Mockito.doReturn(response).when(marketDataService).getTradingStatusSync(instrumentId);
 
         waitForThrottlingCounters();
 
-        testThrottling(() -> marketDataService.getTradingStatusSync(instrumentId), ApiCallsThrottling.MARKET_DATA_SERVICE_LIMIT);
+        testThrottling(() -> marketDataService.getTradingStatusSync(instrumentId), ApiCallsThrottling.MARKET_DATA_SERVICE_LIMIT, response);
     }
 
     // region ordersService tests
@@ -130,11 +145,12 @@ public class ApiCallsThrottlingIntegrationTest {
         final String accountId = TestAccounts.IIS.getId();
         final String orderId = TestOrderStates.ORDER_STATE1.getOrderId();
 
-        Mockito.doReturn(null).when(ordersService).getOrderStateSync(accountId, orderId);
+        OrderState orderState = OrderState.getDefaultInstance();
+        Mockito.doReturn(orderState).when(ordersService).getOrderStateSync(accountId, orderId);
 
         waitForThrottlingCounters();
 
-        testThrottling(() -> ordersService.getOrderStateSync(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_LIMIT);
+        testThrottling(() -> ordersService.getOrderStateSync(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_LIMIT, orderState);
     }
 
     @Test
@@ -143,13 +159,15 @@ public class ApiCallsThrottlingIntegrationTest {
         final String orderId = TestOrderStates.ORDER_STATE1.getOrderId();
 
         Mockito.doReturn(null).when(ordersService).getOrderStateSync(accountId, orderId);
-        Mockito.doReturn(null).when(ordersService).getOrdersSync(accountId);
+
+        List<OrderState> orderStates = List.of(TestOrderStates.ORDER_STATE1.tinkoffOrderState(), TestOrderStates.ORDER_STATE2.tinkoffOrderState());
+        Mockito.doReturn(orderStates).when(ordersService).getOrdersSync(accountId);
 
         waitForThrottlingCounters();
 
         ExecutionUtils.run(() -> ordersService.getOrderStateSync(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_LIMIT);
 
-        testThrottling(() -> ordersService.getOrdersSync(accountId), ApiCallsThrottling.ORDERS_SERVICE_GET_ORDERS_LIMIT);
+        testThrottling(() -> ordersService.getOrdersSync(accountId), ApiCallsThrottling.ORDERS_SERVICE_GET_ORDERS_LIMIT, orderStates);
     }
 
     @Test
@@ -163,14 +181,17 @@ public class ApiCallsThrottlingIntegrationTest {
         final OrderType orderType = OrderType.ORDER_TYPE_MARKET;
 
         Mockito.doReturn(null).when(ordersService).getOrderState(accountId, orderId);
-        Mockito.doReturn(null).when(ordersService).postOrderSync(figi, quantity, price, orderDirection, accountId, orderType, orderId);
+
+        PostOrderResponse response = PostOrderResponse.getDefaultInstance();
+        Mockito.doReturn(response).when(ordersService).postOrderSync(figi, quantity, price, orderDirection, accountId, orderType, orderId);
 
         waitForThrottlingCounters();
 
         ExecutionUtils.run(() -> ordersService.getOrderState(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_LIMIT);
 
-        final Runnable runnable = () -> ordersService.postOrderSync(figi, quantity, price, orderDirection, accountId, orderType, orderId);
-        testThrottling(runnable, ApiCallsThrottling.ORDERS_SERVICE_POST_ORDER_LIMIT);
+        final Supplier<PostOrderResponse> supplier =
+                () -> ordersService.postOrderSync(figi, quantity, price, orderDirection, accountId, orderType, orderId);
+        testThrottling(supplier, ApiCallsThrottling.ORDERS_SERVICE_POST_ORDER_LIMIT, response);
     }
 
     @Test
@@ -178,30 +199,35 @@ public class ApiCallsThrottlingIntegrationTest {
         final String accountId = TestAccounts.IIS.getId();
         final String orderId = TestOrderStates.ORDER_STATE1.getOrderId();
 
-        Mockito.doReturn(null).when(ordersService).cancelOrderSync(accountId, orderId);
+        final Instant instant = Instant.ofEpochMilli(1000);
+        Mockito.doReturn(instant).when(ordersService).cancelOrderSync(accountId, orderId);
 
         waitForThrottlingCounters();
 
         ExecutionUtils.run(() -> ordersService.getOrderState(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_LIMIT);
 
-        testThrottling(() -> ordersService.cancelOrderSync(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_CANCEL_ORDER_LIMIT);
+        testThrottling(() -> ordersService.cancelOrderSync(accountId, orderId), ApiCallsThrottling.ORDERS_SERVICE_CANCEL_ORDER_LIMIT, instant);
     }
 
     // endregion
 
-    private void testThrottling(final Runnable runnable, final int limit) throws InterruptedException {
+    private <T> void testThrottling(final Supplier<T> supplier, final int limit, final T expectedResult) throws InterruptedException {
         System.gc(); // to reduce the chance of the GC start during test which can increase execution time
 
-        long duration = ExecutionUtils.run(runnable, limit).toMillis();
+        ExecutionResult<T> result = ExecutionUtils.get(supplier, limit);
+        long duration = result.duration().toMillis();
 
         Assertions.assertTrue(duration < 100, "Execution expected to take less than 100 ms, but took " + duration + " ms");
 
         waitForThrottlingCounters();
 
-        duration = ExecutionUtils.run(runnable, limit + 1).toMillis();
+        result = ExecutionUtils.get(supplier, limit + 1);
+        duration = result.duration().toMillis();
 
         final long interval = apiProperties.throttlingInterval();
         AssertUtils.assertRangeInclusive(interval - 20, (int) (interval * 1.25), duration);
+
+        Assertions.assertSame(expectedResult, result.result());
     }
 
     // used to finish all throttling counters triggered by mocks and previous tests
